hero section responsive

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <section class="hero-section" id="hero">
       <div class="hero__container container">
         <div class="hero__left">
-          <h3 class="hero__title">Qodir Bozorov</h3>
+          <h3 class="hero__title">Abduqodir Bozorov</h3>
           <h2 class="hero__heading">Web development</h2>
           <p class="hero__text">Men brandingizni dizayn qilaman, siz uchun saytning frontend qismini quraman. UX loyihangizni yozishda va qo’llab quvvatlyman</p>
           <a href="#" class="hero__button">Yo'qlash</a>
         </div>
-        <div class="hero__right">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem voluptate unde id animi est beatae ea qui, ex perferendis. Eligendi repudiandae quod nobis mollitia quae at totam tenetur esse, nisi, pariatur perspiciatis asperiores.
+        <div class="hero__right illustration">
+          
         </div>
       </div>
     </section>
